Enable preview feature of JDK 18.