@@ -31,12 +31,10 @@
 				<version>3.10.1</version>
 				<configuration>
 					<release>18</release>
-					<!-- JDK 18 don´t support preview feature: insert minus-minus before the flag
-					<compilerArgs>enable-preview</compilerArgs>
-					-->
 					<encoding>UTF-8</encoding>
 					<source>18</source>
 					<target>18</target>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
